--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,7 +14,7 @@ div#wall #tag-4 {
   display: none;
 }
 
-div#wall .parent #tag-5.slick {
+div#wall .parent div#tag-5.slick {
   display: none;
 }
 
